[package]
name = "pantera-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Clap
clap = { version = "4.5.13" }
clap_derive = { version = "4.0.0-rc.1" }

# Internal modules
pantera-parser = { path = "../pantera-parser" }
pantera-ast = { path = "../pantera-ast" }
pantera-compiler = { path = "../pantera-compiler" }
pantera-vm = { path = "../pantera-vm" }
pantera-heap = { path = "../pantera-heap" }
